Attempt to fix mobile offscreen whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
 }
 
 /*Fixed Mobile Overflow*/
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
   html, body {
   overflow-x: hidden;
   }
